# HomeWork_22.2

./: .env  .gitignore  pyproject.toml
config/: settings.py  urls.py
shop/: admin.py  forms.py  models.py  services.py  urls.py  views.py
shop/management/commands/: fill.py
shop/migrations/: 0001_initial.py  0002_product_user.py  0003_category_alter_product_category.py
shop/templates/shop/: base.html  blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html  contacts.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html
shop/templates/shop/includes/: inc_main_menu.html
shop/templatetags/: my_tags.py
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_verify_token.py  0003_alter_user_verify_token.py  0004_alter_user_verify_token.py
users/templates/users/: change_password.html  error_password_change.html  login.html  user_form.html  verify.html  verify_error.html  verify_success.html
